--- a/CURD_ON_Book/src/main/resources/application.properties
+++ b/CURD_ON_Book/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=CURD_ON_Book
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost/books
 spring.datasource.username=Cdac
 spring.datasource.password=Cdac@123456
-spring.datasource.driver-class-name=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
 
-server.port=8082
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
