--- a/CURD_ON_Book/src/main/resources/application.properties
+++ b/CURD_ON_Book/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+
+#File uploading part
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=300MB
+spring.servlet.multipart.file-size-threshold=1KB
+
+
 spring.application.name=CURD_ON_Book
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost/books
